force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <label>職員名簿</label>
    <nameField>
        <label>職員名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>