force-app/main/default/objects/Staff__c/fields/BreakTimeTarget__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>休憩時間対象</label>
    <type>Checkbox</type>
</CustomField>