force-app/main/default/objects/Staff__c/fields/ListDisplayCheck__c.field-meta.xml
<CustomField>
    <fullName>ListDisplayCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>職員リストに表示</label>
    <type>Checkbox</type>
</CustomField>