force-app/main/default/objects/Staff__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>幼稚園</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北広島わかば</fullName>
            </value>
            <value>
                <fullName>平岸</fullName>
            </value>
            <value>
                <fullName>カルチュア</fullName>
            </value>
            <value>
                <fullName>ケーアンドケー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>