force-app/main/default/objects/Staff__c/fields/StaffCode__c.field-meta.xml
<CustomField>
    <fullName>StaffCode__c</fullName>
    <label>社員コード</label>
    <length>13</length>
    <type>Text</type>
</CustomField>