force-app/main/default/objects/Staff__c/fields/WorkDivision__c.field-meta.xml
<CustomField>
    <fullName>WorkDivision__c</fullName>
    <label>勤務区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>正職保育教諭</fullName>
            </value>
            <value>
                <fullName>正職員</fullName>
            </value>
            <value>
                <fullName>時給保育教諭</fullName>
            </value>
            <value>
                <fullName>時給職員</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>