force-app/main/default/objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StaffCode__c</columns>
    <columns>WorkDivision__c</columns>
    <columns>BreakTimeTarget__c</columns>
    <columns>School__c</columns>
    <columns>ListDisplayCheck__c</columns>
    <columns>CardNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>